usr/src/uts/common/io/mr_sas/mr_sas_tbolt.c
@@ -16,7 +16,7 @@
  */
 
 /*
- * Copyright 2013 Nexenta Systems, Inc.  All rights reserved.
+ * Copyright 2018 Nexenta Systems, Inc.
  * Copyright 2015, 2017 Citrus IT Limited. All rights reserved.
  * Copyright 2015 Garrett D'Amore <garrett@damore.org>
  */
@@ -52,7 +52,7 @@ extern uint32_t mrsas_tbolt_max_cap_maxxfer;
 extern struct ddi_device_acc_attr endian_attr;
 extern int	debug_level_g;
 extern unsigned int	enable_fp;
-volatile int dump_io_wait_time = 90;
+volatile int dump_io_wait_time = 900;
 extern volatile int  debug_timeout_g;
 extern int	mrsas_issue_pending_cmds(struct mrsas_instance *);
 extern int mrsas_complete_pending_cmds(struct mrsas_instance *instance);
@@ -1108,7 +1108,7 @@ wait_for_outstanding_poll_io(struct mrsas_instance *instance)
 		if (instance->fw_outstanding <= 2) {
 			break;
 		}
-		drv_usecwait(10*MILLISEC);
+		drv_usecwait(MILLISEC);
 		/* complete commands from reply queue */
 		(void) mr_sas_tbolt_process_outstanding_cmd(instance);
 	}
